// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it does not render current page when prop is null 1`] = `
<ul
  className="breadcrumb"
>
  <li
    className="breadcrumb-item"
  >
    <a
      className="breadcrumb-link"
      href="/"
    >
      <i
        className="fa fa-home"
      />
    </a>
  </li>
</ul>
`;

exports[`it renders current page when a string is passed 1`] = `
<ul
  className="breadcrumb"
>
  <li
    className="breadcrumb-item"
  >
    <a
      className="breadcrumb-link"
      href="/"
    >
      <i
        className="fa fa-home"
      />
    </a>
  </li>
  <li
    className="breadcrumb-item active"
  >
    Test
  </li>
</ul>
`;
